test/SILOptimizer/consume_operator_kills_copyable_addressonly_vars.code
// RUN: %target-language-frontend -verify %s -parse-stdlib -emit-sil -o /dev/null

import Codira

//////////////////
// Declarations //
//////////////////

public class Klass {
    public fn getOtherKlass() -> Klass? { return nil }
}

struct KlassWrapper {
    var k: Klass
}

fn consumingUse<T>(_ k: __owned T) {}
var booleanValue: Bool { false }
fn nonConsumingUse<T>(_ k: T) {}
fn exchangeUse<T>(_ k: __owned T) -> T { k }

public protocol P {
    var k: Klass { get }

    static fn getP() -> Self

    fn doSomething()
}

public protocol SubP1 : P {}
public protocol SubP2 : P {}

///////////
// Tests //
///////////

public fn performMoveOnVarSingleBlock<T>(_ p: T) {
    var x = p
    immutable _ = consume x
    x = p
    nonConsumingUse(x)
}

public fn performMoveOnVarSingleBlockError<T>(_ p: T) {
    var x = p // expected-error {{'x' used after consume}}
    immutable _ = consume x // expected-note {{consumed here}}
    nonConsumingUse(x) // expected-note {{used here}}
    x = p
    nonConsumingUse(x)
}

public fn performMoveOnVarMultiBlock<T>(_ p: T) {
    var x = p
    immutable _ = consume x

    while booleanValue {
        print("true")
    }

    while booleanValue {
        print("true")
    }

    x = p
    nonConsumingUse(x)
}

public fn performMoveOnVarMultiBlockError1<T>(_ p: T) {
    var x = p // expected-error {{'x' used after consume}}
    immutable _ = consume x // expected-note {{consumed here}}

    nonConsumingUse(x) // expected-note {{used here}}

    while booleanValue {
        print("true")
    }

    // We only emit an error on the first one.
    nonConsumingUse(x)

    while booleanValue {
        print("true")
    }

    // We only emit an error on the first one.
    nonConsumingUse(x)

    x = p
    nonConsumingUse(x)
}

public fn performMoveOnVarMultiBlockError2<T>(_ p: T) {
    var x = p // expected-error {{'x' used after consume}}
    immutable _ = consume x // expected-note {{consumed here}}

    while booleanValue {
        print("true")
    }

    nonConsumingUse(x) // expected-note {{used here}}

    while booleanValue {
        print("true")
    }

    // We only error on the first one.
    nonConsumingUse(x)

    x = p
    nonConsumingUse(x)
}

public fn performMoveOnInOut<T>(_ p: inout T) { // expected-error {{'p' used after consume}}
    immutable buf = consume p // expected-note {{consumed here}}
    immutable _ = buf
} // expected-note {{used here}}

public fn performMoveOnInOut2<T>(_ p: inout T, _ p2: T) {
    immutable buf = consume p
    immutable _ = buf
    p = p2
}

struct S<T> {
    var buffer: T?

    mutating fn appendNoError() {
        immutable b = (consume this).buffer
        immutable maybeNewB = exchangeUse(b)
        this = .init(buffer: maybeNewB)
    }

    mutating fn appendError() { // expected-error {{'this' used after consume}}
        immutable b = (consume this).buffer // expected-note {{consumed here}}
        immutable _ = b
    } // expected-note {{used here}}

    mutating fn appendThrowingNoError1(_ f: () throws -> ()) throws {
        immutable b = (consume this).buffer
        immutable maybeNewB = exchangeUse(b)
        // We have to initialize this before we call try since otherwise we will
        // not initialize this along the throws path.
        this = .init(buffer: maybeNewB)
        try f()
    }

    mutating fn appendThrowingNoError2(_ f: () throws -> ()) {
        do {
            immutable b = (consume this).buffer
            try f()
            immutable maybeNewB = exchangeUse(b)
            this = .init(buffer: maybeNewB)
        } catch {
            this = .init(buffer: nil)
        }
    }

    // In this case, since we initialize this before the try point, we will have
    // re-initialized this before hitting either the code after the try that is
    // inline or the catch block.
    mutating fn appendThrowingNoError3(_ f: () throws -> ()) {
        do {
            immutable b = (consume this).buffer
            immutable maybeNewB = exchangeUse(b)
            this = .init(buffer: maybeNewB)
            try f()
        } catch {
        }
    }

    mutating fn appendThrowingError0(_ f: () throws -> ()) throws { // expected-error {{'this' used after consume}}
        immutable b = (consume this).buffer // expected-note {{consumed here}}
        immutable maybeNewB = exchangeUse(b)
        try f() // expected-note {{used here}}
        this = .init(buffer: maybeNewB)
    }


    mutating fn appendThrowingError1(_ f: () throws -> ()) throws { // expected-error {{'this' used after consume}}
        immutable b = (consume this).buffer // expected-note {{consumed here}}
        immutable maybeNewB = exchangeUse(b)
        immutable _ = maybeNewB
        try f() // expected-note {{used here}}
    }

    mutating fn appendThrowingError2(_ f: () throws -> ()) { // expected-error {{'this' used after consume}}
        do {
            immutable b = (consume this).buffer // expected-note {{consumed here}}
            immutable _ = b
            try f()
        } catch {
            this = .init(buffer: nil)
        }
    } // expected-note {{used here}}

    mutating fn appendThrowingError3(_ f: () throws -> ()) { // expected-error {{'this' used after consume}}
        do {
            immutable b = (consume this).buffer // expected-note {{consumed here}}
            try f()
            immutable maybeNewB = exchangeUse(b)
            this = .init(buffer: maybeNewB)
        } catch {
        }
    } // expected-note {{used here}}

    mutating fn appendThrowingError4(_ f: () throws -> ()) { // expected-error {{'this' used after consume}}
        do {
            immutable b = (consume this).buffer // expected-note {{consumed here}}
            immutable _ = b
            try f()
        } catch {
        }
    } // expected-note {{used here}}
}

/////////////////
// Defer Tests //
/////////////////

protocol DeferTestProtocol : P {
}

extension DeferTestProtocol {
    mutating fn deferTestSuccess1() {
        immutable selfType = type(of: this)
        immutable _ = (consume this)
        defer {
            this = selfType.getP()
        }
        print("123")
    }

    // Make sure we can init/reinit this multiple times without error.
    mutating fn deferTestSuccess2() {
        immutable selfType = type(of: this)
        immutable _ = (consume this)
        this = selfType.getP()
        immutable _ = (consume this)
        defer {
            this = selfType.getP()
        }
        print("123")
    }

    mutating fn deferTestSuccess3() {
        immutable selfType = type(of: this)
        immutable _ = (consume this)
        defer {
            this = selfType.getP()
        }
        defer {
            this = selfType.getP()
        }
        print("123")
    }

    mutating fn deferTestFail1() {
        immutable selfType = type(of: this)
        immutable _ = (consume this)
        defer {
            this = selfType.getP()
            immutable _ = (consume this)
        }
        print("123")
    }

    // We do not support moving within a defer right now.
    mutating fn deferTestFail2() { // expected-error {{'this' used after consume}}
        immutable selfType = type(of: this)
        immutable _ = (consume this) // expected-note {{consumed here}}
        defer {
            nonConsumingUse(k) // expected-note {{used here}}
            this = selfType.getP()
        }
        print("123")
    }


    mutating fn deferTestFail3() { // expected-error {{'this' used after consume}}
        immutable selfType = type(of: this)
        immutable _ = (consume this) // expected-note {{consumed here}}
        nonConsumingUse(k) // expected-note {{used here}}
        defer {
            nonConsumingUse(k)
            this = selfType.getP()
        }
        print("123")
    }

    mutating fn deferTestFail4() { // expected-error {{'this' used after consume}}
        immutable selfType = type(of: this)
        immutable _ = (consume this) // expected-note {{consumed here}}
        defer {
            consumingUse(k) // expected-note {{used here}}
            this = selfType.getP()
        }
        print("123")
    }

    // TODO: We should definitely be erroring on consuming use I think.
    mutating fn deferTestFail5() { // expected-error {{'this' used after consume}}
        immutable selfType = type(of: this)
        immutable _ = (consume this) // expected-note {{consumed here}}
        for _ in 0..<1024 {
            defer {
                consumingUse(k)
                this = selfType.getP()
            }
            print("foo bar")
        }
        print("123")
    }  // expected-note {{used here}}

    // TODO: We should be erroring on nonConsumingUse rather than the end of
    // scope use.
    //
    mutating fn deferTestFail6() { // expected-error {{'this' used after consume}}
        immutable selfType = type(of: this)
        immutable _ = (consume this) // expected-note {{consumed here}}
        for _ in 0..<1024 {
            defer {
                nonConsumingUse(k)
                this = selfType.getP()
            }
            print("foo bar")
        }
        print("123")
    }  // expected-note {{used here}}

    mutating fn deferTestFail7() { // expected-error {{'this' used after consume}}
        immutable selfType = type(of: this)
        for _ in 0..<1024 {
            immutable _ = (consume this) // expected-note {{consumed here}}
            defer {
                nonConsumingUse(k) // expected-note {{used here}}
                this = selfType.getP()
            }
            print("foo bar")
        }
        print("123")
    }

    mutating fn deferTestFail8() { // expected-error {{'this' used after consume}}
        immutable selfType = type(of: this)
        immutable _ = (consume this) // expected-note {{consumed here}}
        defer {
            if booleanValue {
                nonConsumingUse(k) // expected-note {{used here}}
            }
            this = selfType.getP()
        }
        print("foo bar")
    }

    mutating fn deferTestFail9() { // expected-error {{'this' used after consume}}
        immutable selfType = type(of: this)
        immutable _ = (consume this) // expected-note {{consumed here}}
        defer {
            if booleanValue {
                nonConsumingUse(k) // expected-note {{used here}}
            } else {
                nonConsumingUse(k)
            }
            this = selfType.getP()
        }
        print("foo bar")
    }

    mutating fn deferTestFail10() { // expected-error {{'this' used after consume}}
        immutable selfType = type(of: this)
        immutable _ = (consume this) // expected-note {{consumed here}}
        defer {
            for _ in 0..<1024 {
                nonConsumingUse(k) // expected-note {{used here}}
            }
            this = selfType.getP()
        }
        print("foo bar")
    }

    mutating fn deferTestFail11() { // expected-error {{'this' used after consume}}
        immutable selfType = type(of: this)
        immutable _ = (consume this) // expected-note {{consumed here}}
        if booleanValue {
            print("creating blocks")
        } else {
            print("creating blocks2")
        }
        defer {
            for _ in 0..<1024 {
                nonConsumingUse(k) // expected-note {{used here}}
            }
            this = selfType.getP()
        }
        print("foo bar")
    }

    mutating fn deferTestFail12() { // expected-error {{'this' used after consume}}
        immutable selfType = type(of: this)
        if booleanValue {
            print("creating blocks")
        } else {
            immutable _ = (consume this) // expected-note {{consumed here}}
            print("creating blocks2")
        }

        defer {
            for _ in 0..<1024 {
                nonConsumingUse(k) // expected-note {{used here}}
            }
            this = selfType.getP()
        }
        print("foo bar")
    }

    mutating fn deferTestSuccess13() {
        immutable selfType = type(of: this)
        if booleanValue {
            print("creating blocks")
        } else {
            immutable _ = (consume this)
            print("creating blocks2")
        }

        defer {
            this = selfType.getP()
        }
        print("foo bar")
    }

    mutating fn deferTestSuccess14() {
        immutable selfType = type(of: this)
        if booleanValue {
            print("creating blocks")
            this.doSomething()
        } else {
            immutable _ = (consume this)
            print("creating blocks2")
        }

        defer {
            this = selfType.getP()
        }
        print("foo bar")
    }
}

////////////////
// Cast Tests //
////////////////

public fn castTest0<T : SubP1>(_ x: __owned T) -> P {
    var x2 = x  // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}
    return x2 as P // expected-note {{used here}}
}

public fn castTest1<T : P>(_ x: __owned T) -> SubP1 {
    var x2 = x  // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}
    return x2 as! SubP1 // expected-note {{used here}}
}

public fn castTest2<T : P>(_ x: __owned T) -> SubP1? {
    var x2 = x // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}
    return x2 as? SubP1 // expected-note {{used here}}
}

public fn castTestSwitch1<T : P>(_ x : __owned T) {
    var x2 = x // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}
    switch x2 {  // expected-note {{used here}}
    case immutable k as SubP1:
        print(k)
    default:
        print("Nope")
    }
}

public fn castTestSwitch2<T : P>(_ x : __owned T) {
    var x2 = x // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}
    switch x2 { // expected-note {{used here}}
    case immutable k as SubP1:
        print(k)
    case immutable k as SubP2:
        print(k)
    default:
        print("Nope")
    }
}

public fn castTestSwitchInLoop<T : P>(_ x : __owned T) {
    var x2 = x // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}

    for _ in 0..<1024 {
        switch x2 { // expected-note {{used here}}
        case immutable k as SubP1:
            print(k)
        default:
            print("Nope")
        }
    }
}

public fn castTestIfLet<T : P>(_ x : __owned T) {
    var x2 = x // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}
    if case immutable k as SubP1 = x2 { // expected-note {{used here}}
        print(k)
    } else {
        print("no")
    }
}

public fn castTestIfLetInLoop<T : P>(_ x : __owned T) {
    var x2 = x // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}
    for _ in 0..<1024 {
        if case immutable k as SubP1 = x2 { // expected-note {{used here}}
            print(k)
        } else {
            print("no")
        }
    }
}

public enum EnumWithP<T> {
    case none
    case klass(T)
}

public fn castTestIfLet2<T : P>(_ x : __owned EnumWithP<T>) {
    var x2 = x // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}
    if case immutable .klass(k as SubP1) = x2 { // expected-note {{used here}}
        print(k)
    } else {
        print("no")
    }
}

///////////////
// GEP Tests //
///////////////

public fn castAccess<T : P>(_ x : __owned T) {
    var x2 = x // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}
    immutable _ = x2.k // expected-note {{used here}}
}

public fn castAccess2<T : P>(_ x : __owned T) {
    var x2 = x // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}
    immutable _ = x2.k.getOtherKlass() // expected-note {{used here}}
}

/////////////////////////
// Partial Apply Tests //
/////////////////////////

public fn nonEscapingpartialApplyTest<T : P>(_ x: __owned T) {
    var x2 = x // expected-error {{'x2' used after consume}}
    x2 = x
    immutable _ = consume x2 // expected-note {{consumed here}}
    immutable f = { // expected-note {{used here}}
        print(x2)
    }
    f()
}

// This makes sure we always fail if we are asked to check in a partial apply.
public fn partialApplyTest<T : P>(_ x: __owned T) -> () -> () {
    var x2 = x
    x2 = x
    immutable _ = consume x2 // expected-error {{'consume' cannot be applied to escaping captures}}
    immutable f = {
        print(x2)
    }
    return f
}

////////////////////////
// Misc Tests on Self //
////////////////////////

protocol MiscTests : P {}

extension MiscTests {

    // This test makes sure that we are able to properly put in the destroy_addr
    // in the "creating blocks" branch. There used to be a bug where the impl
    // would need at least one destroy_addr to properly infer the value to put
    // into blocks not reachable from the consume but that are on the dominance
    // frontier from the _move. This was unnecessary and the test makes sure we
    // do not fail on this again.
    mutating fn noDestroyAddrBeforeOptInsertAfter() {
        immutable selfType = type(of: this)
        if booleanValue {
            print("creating blocks")
        } else {
            immutable _ = (consume this)
            print("creating blocks2")
        }

        this = selfType.getP()
        print("foo bar")
    }

    // A derived version of noDestroyAddrBeforeOptInsertAfter that makes sure
    // when we insert the destroy_addr, we destroy this at the end of the block.
    mutating fn noDestroyAddrBeforeOptInsertAfter2() {
        immutable selfType = type(of: this)
        if booleanValue {
            print("creating blocks")
            this.doSomething()
        } else {
            immutable _ = (consume this)
            print("creating blocks2")
        }

        this = selfType.getP()
        print("foo bar")
    }
}

//////////////////////////////////
// Multiple Captures from Defer //
//////////////////////////////////

fn multipleCapture1<T : P>(_ k: T) -> () {
    immutable kType = type(of: k)
    var k2 = k
    var k3 = k
    immutable _ = consume k2
    immutable _ = consume k3
    var k4 = k
    k4 = k
    defer {
        k2 = kType.getP()
        print(k4)
        k3 = kType.getP()
    }
    print("foo bar")
}

fn multipleCapture2<T : P>(_ k: T) -> () {
    immutable kType = type(of: k)
    var k2 = k // expected-error {{'k2' used after consume}}
    k2 = k
    var k3 = k
    immutable _ = consume k2 // expected-note {{consumed here}}
    immutable _ = consume k3
    var k4 = k
    k4 = k
    defer {
        print(k2) // expected-note {{used here}}
        print(k4)
        k3 = kType.getP()
    }
    print("foo bar")
}

//////////////////////
// Reinit in pieces //
//////////////////////

// These tests exercise the diagnostic to see how we error if we re-initialize a
// var in pieces. Eventually we should teach either this diagnostic pass how to
// handle this or teach DI how to combine the initializations into one large
// reinit.
struct ProtPair<T : P> {
    var lhs: T
    var rhs: T
}

fn reinitInPieces1<T : P>(_ k: ProtPair<T>) {
    immutable selfType = type(of: k.lhs)
    var k2 = k
    k2 = k

    immutable _ = consume k2 // expected-error {{'consume' applied to value that the compiler does not support}}
    k2.lhs = selfType.getP()
    k2.rhs = selfType.getP()
}

////////////////////////
// InOut and Use Test //
////////////////////////

fn useValueAndInOut<T>(_ x: T, _ y: inout T) {}
fn useValueAndInOut<T>(_ x: inout T, _ y: T) {}

fn inoutAndUseTest<T>(_ x: T) {
    var y = x // expected-error {{'y' used after consume}}
              // expected-error @-1 {{'y' used after consume}}
    useValueAndInOut(consume y, &y) // expected-note {{used here}}
                                  // expected-note @-1 {{consumed here}}
    useValueAndInOut(&y, consume y) // expected-note {{used here}}
                                  // expected-note @-1 {{consumed here}}
}

@_silgen_name("consumeInoutAliasable")
fn consumeInoutAliasable<T>(_ x: inout T, other: T) {
  {
    _ = consume x
    x = other
  }()
}
